# switchcraft

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
artifacts/: .gitignore
configs/: devices.lab.yaml  devices.yaml
docs/: CONFIG_ENGINE_DESIGN.md  CONFIG_MANAGEMENT_DESIGN.md  HIL-TESTING.md  MCP-EXAMPLES.md  PROJECT-STATUS.md  QUICK-REFERENCE.md  TEST-PLAN.md  TEST-RESULTS.md  TROUBLESHOOTING.md  VLAN-254-SETUP-STATUS.md  brocade-fcx-commands.md  onti-s508cl-commands.md  zyxel-gs1900-commands.md
src/mcp_network_switch/: __init__.py  server.py
src/mcp_network_switch/config/: __init__.py  inventory.py  schema.py
src/mcp_network_switch/config_engine/: __init__.py  diff.py  engine.py  executor.py  generator.py  parser.py  schema.py  validator.py
src/mcp_network_switch/config_store/: __init__.py  git_manager.py  store.py
src/mcp_network_switch/devices/: __init__.py  base.py  brocade.py  onti.py  openwrt.py  zyxel.py  zyxel_cli.py
src/mcp_network_switch/hil/: __init__.py  cli.py  constraints.py  mode.py  runner.py
src/mcp_network_switch/utils/: __init__.py  audit_log.py  connection.py  logging_config.py
tests/: __init__.py  hil_spec.yaml  test_brocade.py  test_config_engine.py  test_config_store.py  test_connection.py  test_devices.py  test_git_integration.py  test_integration_real.py  test_inventory.py  test_schema.py  test_vlan_integration.py  test_zyxel.py
